[gd_scene load_steps=5 format=2]

[ext_resource path="res://resources/rim.png" type="Texture" id=1]
[ext_resource path="res://resources/Stone_12-512x512.png" type="Texture" id=2]
[ext_resource path="res://scripts/chunk.gd" type="Script" id=3]

[sub_resource type="RectangleShape2D" id=1]
resource_local_to_scene = true
extents = Vector2( 10, 250 )

[node name="Chunk" type="Node2D"]
script = ExtResource( 3 )

[node name="GroundUp" type="Polygon2D" parent="."]
self_modulate = Color( 0.713726, 0.713726, 0.713726, 1 )
texture = ExtResource( 2 )
texture_scale = Vector2( 0.5, 0.5 )

[node name="GroundDown" type="Polygon2D" parent="."]
self_modulate = Color( 0.713726, 0.713726, 0.713726, 1 )
texture = ExtResource( 2 )
texture_scale = Vector2( 0.5, 0.5 )

[node name="BorderUp" type="Line2D" parent="."]
modulate = Color( 2, 2, 2, 1 )
default_color = Color( 1, 1, 1, 1 )
texture = ExtResource( 1 )
texture_mode = 1
joint_mode = 2
begin_cap_mode = 2
end_cap_mode = 2

[node name="BorderDown" type="Line2D" parent="."]
modulate = Color( 2, 2, 2, 1 )
default_color = Color( 1, 1, 1, 1 )
texture = ExtResource( 1 )
texture_mode = 1
joint_mode = 2
begin_cap_mode = 2
end_cap_mode = 2

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 2
monitoring = false

[node name="CollisionUp" type="CollisionPolygon2D" parent="Area2D"]

[node name="CollisionDown" type="CollisionPolygon2D" parent="Area2D"]

[node name="PlayerDetector" type="Area2D" parent="."]
collision_layer = 0
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerDetector"]
shape = SubResource( 1 )
disabled = true

[connection signal="area_entered" from="PlayerDetector" to="." method="_on_PlayerDetector_area_entered"]
